// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traverseAndMapFilepaths > should return an arborescence, given a valid RootFolder (full) 1`] = `
[
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz",
    "name": "file2",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz",
    "name": "file3",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz/foo",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar",
    "name": "file2",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/baz/bar",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/baz/bar/foo",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/baz/bar/foo",
    "name": "file2",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/baz",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/baz",
    "name": "file2",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/baz",
    "name": "file3",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/foo/baz/bar",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/foo/baz/bar",
    "name": "file2",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/foo/baz",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/foo",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/foo",
    "name": "file2",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/foo",
    "name": "file3",
  },
]
`;

exports[`traverseAndMapFilepaths > should return an arborescence, given a valid RootFolder (partial 2) 1`] = `
[
  {
    "directory": "./packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz/foo",
    "name": "file1",
  },
]
`;

exports[`traverseAndMapFilepaths > should return an arborescence, given a valid RootFolder (partial) 1`] = `
[
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz",
    "name": "file1",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz",
    "name": "file2",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz",
    "name": "file3",
  },
  {
    "directory": "packages/prebuilder/src/lib/__tests__/fakeDirectory/bar/baz/foo",
    "name": "file1",
  },
  {
    "directory": "./packages/prebuilder/src/lib/__tests__/fakeDirectory/bar",
    "name": "file1",
  },
  {
    "directory": "./packages/prebuilder/src/lib/__tests__/fakeDirectory/bar",
    "name": "file2",
  },
]
`;
